Aligned labels correctly and removed border

--- a/src/components/app.css
+++ b/src/components/app.css
@@ -5,8 +5,8 @@ input {
 }
 
 label {
-  padding-left: 0.5rem;
   padding-right: 0.5rem;
+  padding-left: 0.5rem;
 }
 
 .App{
@@ -15,17 +15,16 @@ label {
 }
 
 .container__items {
-  margin-top: 1rem;
+  margin-top: 1.5rem;
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   gap: 1.5rem;
 }
 
 .container__item {
-  border: 1px solid;
-  border-radius: 1rem;
-  padding: 0.5rem;
-  border-color: gainsboro;
+  display: flex;
+  border-color: transparent;
+  min-width: 20rem;
 }
 
 .sizedesc {
